--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-font": "^1.0.4",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-svg-sprites": "^4.1.2",
     "gulp-tasks-preset": "^0.3.4",
+    "gulp-twig": "^1.1.1",
     "klaw-sync": "^3.0.2",
     "twig": "^1.10.5"
   }
