--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "zip": "zip -r moveon public"
+    "zip": "cd public; rm -f moveon.zip && zip -r moveon.zip *"
   },
   "keywords": [],
   "author": "",
